add Bearer Token to swagger docs
